# Automation-of-AVR

./: .gitignore  MakeFile  README.md  pyproject.toml
avr_system/: manage.py  system_avr_db.json
avr_system/avr_system/: asgi.py  settings.py  urls.py  wsgi.py
avr_system/avr_system/settings/: base.py  local.py  pro.py
avr_system/avr_type/: admin.py  api.py  apps.py  configs.py  context_processors.py  filters.py  forms.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
avr_system/avr_type/migrations/: 0001_initial.py  0002_alter_smartrelay_model.py  0003_classification_slug.py  0004_classification_access.py  0005_typeavr_access_alter_classification_access.py  0006_banner.py  0007_banner_photo.py  0008_imagetypeavr.py  0009_alter_imagetypeavr_photo.py  0010_alter_imagetypeavr_photo.py  0011_advantage.py  0012_advantage_access.py  0013_rename_shoice_in_classification_choice_in_and_more.py  0014_classification_macro_code_alter_advantage_icon_and_more.py  0015_order.py  0015_order_scheme.py  0016_alter_classification_access.py  0016_alter_order_access_alter_order_status.py  0017_alter_advantage_options_alter_classification_options_and_more.py  0018_alter_classification_work_tp.py  0019_classification_sell.py  0020_alter_classification_access_and_more.py  0021_alter_classification_macro_code.py  (+1 more)
avr_system/software/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
avr_system/tests/: test_models.py
avr_system/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
avr_system/utilits/: mixins.py
(+47 files in other folders)
