[tool.poetry]
name = "authomation for system of avr"
version = "1.0.0"
description = "Configuration files for AVR systems on logic controllers and programmable relays."
authors = ["Martynov Viktor"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
pillow = "^10.2.0"
django-imagekit = "^5.0.0"
python-dotenv = "^1.0.1"
markupsafe = "^2.1.4"
click = "^8.1.7"
django-import-export = "^3.3.6"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
